--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- for 5 star rating graphic on posts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!-- Semantic-UI -->
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/semantic-ui/dist/semantic.min.css'/>
+    
     <title>Runtime Terror</title>
     
   </head>
