--- a/spotify_server/authorization_code/public/index.html
+++ b/spotify_server/authorization_code/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Example of the Authorization Code flow with Spotify</title>
+    <title>Spotify Authorization</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <style type="text/css">
       #login, #loggedin {
@@ -19,9 +19,16 @@
   <body>
     <div class="container">
       <div id="login">
-        <h1>This is an example of the Authorization Code flow</h1>
-        <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+        <div >
+          <center>
+            <img src="https://firebasestorage.googleapis.com/v0/b/mutter-ucla.appspot.com/o/spotify_login_1.png?alt=media&token=2ae33c4c-c783-4b64-a88b-5fd408ee954d" style="width:75%;height:auto;" class="center" >
+          </center>
+        </div>
+        <div>
+          <center><a href="/login" class="btn btn-primary">Connect Spotify</a></center>
+        </div>
       </div>
+
       <div id="loggedin">
         <div id="user-profile">
         </div>
